@@ -45,6 +45,7 @@ lib/npg_pipeline/function/cache_merge_component.pm
 lib/npg_pipeline/function/cluster_count.pm
 lib/npg_pipeline/function/current_analysis_link.pm
 lib/npg_pipeline/function/definition.pm
+lib/npg_pipeline/function/haplotype_caller.pm
 lib/npg_pipeline/function/illumina_qc_archiver.pm
 lib/npg_pipeline/function/log_files_archiver.pm
 lib/npg_pipeline/function/p4_stage1_analysis.pm
@@ -109,6 +110,7 @@ t/20-function-cache_merge_component.t
 t/20-function-cluster_count.t
 t/20-function-current_analysis_link.t
 t/20-function-definition.t
+t/20-function-haplotype_caller.t
 t/20-function-illumina_qc_archiver.t
 t/20-function-log_files_archiver.t
 t/20-function-p4_stage1_analysis.t
@@ -1047,6 +1049,8 @@ t/data/Recipes/TileLayout.xml
 t/data/release/config/archive_off/product_release.yml
 t/data/release/config/archive_on/product_release.yml
 t/data/release/config/default_s3_archival/product_release.yml
+t/data/release/config/haplotype_caller_on/product_release.yml
+t/data/release/config/haplotype_caller_on_study_specific/product_release.yml
 t/data/release/config/multiple_configs/product_release.yml
 t/data/release/config/no_config/product_release.yml
 t/data/release/config/notify_off/product_release.yml
