@@ -1,0 +1,11 @@
+---
+default:
+  haplotype_caller:
+    enable: false
+
+study:
+  - study_id: "291"
+    haplotype_caller:
+      enable: true
+      sample_chunking: hs38primary
+      sample_chunking_number: 24
